fixed font weight on mobile

--- a/src/components/presentational/PersonalTraining/personalTraining.module.scss
+++ b/src/components/presentational/PersonalTraining/personalTraining.module.scss
@@ -402,8 +402,10 @@
 					p {
 						width: 100%;
 						max-height: 100%;
+						font-weight: 100;
 						@media screen and (max-width: $breakpoint-mobile) {
 							max-height: 600px;
+							font-weight: 300;
 						}
 						overflow-y: auto;
 						br {
